@@ -4,15 +4,20 @@ my1sim85-0.5.0
 
 Feature:
 - only single instance allowed
+- new device: keypad with encoder!
+- random value on start-up (but with issue! see below...)
 
 Update:
 - can now assign port on 7-seg panel
+- updated register panel
 
 Bugfix:
 - n/a
 
 Issues:
 - still missing accurate 1ms (or better) timer
+  = testing some codes (promising, but no callback method! :()
+- time-based randomizer not really working? (srand issue?)
 
 --------------
 my1sim85-0.4.4
